Xml schema builder

--- a/Ultramarine.Generators.SchemaBuilder/Project.gen.222222.json
+++ b/Ultramarine.Generators.SchemaBuilder/Project.gen.222222.json
@@ -2,7 +2,7 @@
   "$schema": "./schema.json",
   "description": "ProjectDescription",
   "name": "Project",
-  "tasks": [
+  "tasks": [    
     {
       "loadProjectItem": {
         "name": "loadCSharpTasks",
@@ -39,7 +39,7 @@
           {
             "textTransformation": {
               "name": "transformToEs6",
-              "fileName": "$this equals 'XmlSchemaTaskTemplate.tt'",
+              "fileName": "$this equals 'JsonSchemaTaskTemplate.tt'",
               "projectName": "$this equals 'Ultramarine.GeneratorRecipes'"
             }
           },
@@ -47,8 +47,8 @@
             "createProjectItem": {
               "name": "createTaskItem",
               "connectedWith": "transformToEs6",
-              "itemName": "{TaskName}Schema.xsd",
-              "folderPath": "XmlSchemas",
+              "itemName": "{TaskName}Schema.json",
+              "folderPath": "JsonSchemas",
               "overwrite": true
             }
           }
@@ -57,41 +57,9 @@
     },
     {
       "textTransformation": {
-        "name": "transformToEs6CompositeTask",
-        "connectedWith": "loadCSharpTaskClasses",
-        "fileName": "$this equals 'XmlSchemaCompositeTask.tt'",
-        "projectName": "$this equals 'Ultramarine.GeneratorRecipes'"
-      }
-    },
-    {
-      "createProjectItem": {
-        "name": "createTaskItemIterator",
-        "connectedWith": "transformToEs6CompositeTask",
-        "itemName": "XmlSchemas/CompositeTaskSchema.xsd",
-        "overwrite": true
-      }
-    },
-    {
-      "textTransformation": {
-        "name": "transformToEs6BaseTask",
-        "connectedWith": "loadCSharpTaskClasses",
-        "fileName": "$this equals 'XmlSchemaBaseTask.tt'",
-        "projectName": "$this equals 'Ultramarine.GeneratorRecipes'"
-      }
-    },
-    {
-      "createProjectItem": {
-        "name": "createTaskItemBaseTask",
-        "connectedWith": "transformToEs6BaseTask",
-        "itemName": "XmlSchemas/TaskSchema.xsd",
-        "overwrite": true
-      }
-    },
-    {
-      "textTransformation": {
         "name": "transformToEs6",
         "connectedWith": "loadCSharpTaskClasses",
-        "fileName": "$this equals 'XmlSchemaTemplate.tt'",
+        "fileName": "$this equals 'JsonSchemaTemplate.tt'",
         "projectName": "$this equals 'Ultramarine.GeneratorRecipes'"
       }
     },
@@ -99,7 +67,7 @@
       "createProjectItem": {
         "name": "createTaskItem",
         "connectedWith": "transformToEs6",
-        "itemName": "schema.xsd",
+        "itemName": "schema.json",
         "overwrite": true
       }
     }
