--- a/Ultramarine.GeneratorRecipes/Ultramarine.GeneratorRecipes.csproj
+++ b/Ultramarine.GeneratorRecipes/Ultramarine.GeneratorRecipes.csproj
@@ -41,11 +41,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlSchemaCompositeTask.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>XmlSchemaCompositeTask.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="JsonSchemaTaskTemplate.tt" />
+    <Content Include="XmlSchemaBaseTask.tt">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="XmlSchemaCompositeTask.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>XmlSchemaCompositeTask.cs</LastGenOutput>
+    </Content>
+    <Content Include="XmlSchemaTemplate.tt" />
     <Content Include="JsonSchemaTemplate.tt" />
     <Content Include="TransformTask.tt" />
+    <Content Include="XmlSchemaTaskTemplate.tt">
+      <LastGenOutput>XmlSchemaTaskTemplate1.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
