--- a/Ultramarine.VSExtension/packages.config
+++ b/Ultramarine.VSExtension/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr4.Runtime" version="4.6.6" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis" version="2.10.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net461" />
@@ -9,46 +10,52 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.10.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.10.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.10.0" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.8.525" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26228" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Imaging" version="15.0.26228" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25408" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.8.525" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="17.14.275" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Imaging" version="15.0.26228" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="17.14.40254" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Interop" version="17.14.40260" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.LanguageServices" version="2.10.0" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.33" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.33" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.10" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26228" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26228" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6071" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26228" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.9.28307" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="17.14.40260" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30319" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61030" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="17.14.40260" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30110" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50727" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="17.14.40260" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Threading" version="15.0.240" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.122" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Utilities" version="15.0.26228" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="17.14.40260" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="17.14.40260" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Threading" version="17.13.2" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="17.13.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Utilities" version="15.9.28307" targetFramework="net48" />
+  <package id="Microsoft.VisualStudio.Validation" version="17.8.8" targetFramework="net48" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.9.3039" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.2" targetFramework="net461" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="StreamJsonRpc" version="1.3.23" targetFramework="net48" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
-  <package id="System.Composition" version="1.0.31" targetFramework="net461" />
-  <package id="System.Composition.AttributedModel" version="1.2.0" targetFramework="net461" />
-  <package id="System.Composition.Convention" version="1.2.0" targetFramework="net461" />
-  <package id="System.Composition.Hosting" version="1.2.0" targetFramework="net461" />
-  <package id="System.Composition.Runtime" version="1.2.0" targetFramework="net461" />
-  <package id="System.Composition.TypedParts" version="1.2.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Composition" version="8.0.0" targetFramework="net48" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net48" />
+  <package id="System.Composition.AttributedModel" version="1.2.0" targetFramework="net48" />
+  <package id="System.Composition.Convention" version="1.2.0" targetFramework="net48" />
+  <package id="System.Composition.Hosting" version="1.2.0" targetFramework="net48" />
+  <package id="System.Composition.Runtime" version="1.2.0" targetFramework="net48" />
+  <package id="System.Composition.TypedParts" version="1.2.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
@@ -59,28 +66,33 @@
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
